--- a/platforms/ios/www/css/main-5.5-inch.css
+++ b/platforms/ios/www/css/main-5.5-inch.css
@@ -5,7 +5,7 @@
 
 
 #category-container { height: 613px; }
-#welcome-categories div .title, 
+#welcome-categories div .title,
 #category-container div .title { width: 380px; font-size: 19px; }
 #welcome-categories .catItem { max-height: 155px; }
 #category-container .catItem { max-height: 300px; }
@@ -19,6 +19,7 @@
 #list-row-wrapper,
 #notifications-container,
 #list-row-wrapper.no-edit,
+#friends #list-row-wrapper
 #list-row-wrapper.friend-list,
 .follow-list #list-row-wrapper,
 .movie-seen-list #list-row-wrapper,
@@ -69,13 +70,13 @@
     height: 195px;
 }
 #message-context {
-    line-height: 25px; 
+    line-height: 25px;
 }
 #message-context img {
     height: 105px;
 }
 .context-info {
-    width: 255px; 
+    width: 255px;
 }
 #side-swipe .watching-next.contain input {
     margin-left: 42px;
@@ -85,7 +86,7 @@
 #profile .sub-header div { width: 206px; }
 #profile .sub-header div:first-child { width: 207px; }
 .lists-nav { background-position: 390px; }
-#friends #list-row-wrapper { height: 566px; }
+
 header nav h1 {
     width: 320px;
     height: 65px;
@@ -125,7 +126,7 @@ div#mask .wheel {
     width: 192px;
 }
 #profile-content .content-info {
-    font-size: 20px; 
+    font-size: 20px;
 }
 #settings-gear {
     height: 25px;
@@ -167,15 +168,15 @@ div#friends-queued.bottom-info span {
 #list-items .item .movie-info h1 { font-size: 20px; }
 #list-items div.item-icons { margin-bottom: 10px; font-size: 20px; }
 #list-items div.item-icons div.recs {
-    background-size: 15px 15px; 
+    background-size: 15px 15px;
     padding-left: 18px;
 }
-.movie-info .buttons div { 
+.movie-info .buttons div {
     background-size: 15px;
     line-height: 35px;
     font-size: 15px;
     height: 35px;
-    width: 145px; 
+    width: 145px;
 }
 #list-items .item .movie-info .watch-icon { background-position-y: 10px; }
 #list-items .item .movie-info .seen-icon { background-position-y: 10px; }
@@ -203,7 +204,7 @@ h6.like-you + .action {
 .feed-item .action-info {
     line-height: 29px;
 }
-.feed-item .action-info .comment { 
+.feed-item .action-info .comment {
     line-height: 29px;
     font-size: 24px;
 }
@@ -366,7 +367,7 @@ input.slider-search-form { width: 383px; }
 #dashboard #fabric-menu.open { top: 66px; }
 .nav-menu-item { height: 39px; }
 .menu-text { line-height: 39px; font-size: 22px; }
-#services .commerce, 
+#services .commerce,
 #available-services .commerce { background-size: 38px; }
 .commerce h2 { font-size: 20px; padding: 15px 0; }
 #side-menu-profile .side-menu-icon { border-radius: 20px; }
@@ -375,7 +376,7 @@ input.slider-search-form { width: 383px; }
     margin: 5px 0;
 }
 #friends .lists-row, .movie-seen-list .lists-row, .friend-list .lists-row { height: 56px; }
-.search-users .profile-picture, .lists-row .profile-picture, 
+.search-users .profile-picture, .lists-row .profile-picture,
 .movie-seen-list .profile-picture, .follow-list .profile-picture { height: 55px; border-radius: 27px; width: 55px; }
 div#search-for-friends { background-size: 30px; }
 #search-for-friends, #invite-facebook {
@@ -403,7 +404,7 @@ div#search-for-friends { background-size: 30px; }
     border-radius: 50px;
 }
 .greeting .content .box .info { width: 69%; }
-.greeting .content .box #send-suggestion, 
+.greeting .content .box #send-suggestion,
 .greeting .content .box form #send-message {
     background-size: 20px 19px;
     background-position: 6px 8px;
@@ -431,12 +432,12 @@ header nav #notifications-menu { background-size: 20px; right: 50px; }
 #menu-search-form { margin: 20px auto; }
 .feed-item .avatar {
     border-radius: 33px;
-    margin-right: 15px; 
+    margin-right: 15px;
     height: 65px;
     width: 65px;
 }
 .feed-item .like-you {
-    font-size: 13px; 
+    font-size: 13px;
 }
 .list-item .compatibility,
 .feed-item .compatibility {
@@ -486,17 +487,17 @@ div#friends-queued.bottom-info { left: 250px; }
     background-size: 30px 30px;
 }
 #search-results .result,
-#status-drop .result, 
+#status-drop .result,
 #menu-drop .result { height: 90px; }
 #search-results .result .poster,
-#status-drop .result .poster, 
+#status-drop .result .poster,
 #menu-drop .result .poster {
     width: 60px;
     height: 90px;
     background-size: 60px 90px;
 }
-#search-results .result h1, 
-#status-drop .result h1, 
+#search-results .result h1,
+#status-drop .result h1,
 #menu-drop .result h1 {
     margin: 5px 0;
     font-size: 20px;
@@ -550,7 +551,7 @@ div#friends-queued.bottom-info { left: 250px; }
 .follow-location { font-size: 15px; }
 #seen-by-container, .greeting .content .box h1, #side-swipe .watching-next.contain input,
 .settings-button, #title-synopsis-block h3 { font-size: 16px; }
-#profile .bio .location, #favorite-delta h1, #profile #top-genres .content h1, .greeting .content .box form #send-message, 
+#profile .bio .location, #favorite-delta h1, #profile #top-genres .content h1, .greeting .content .box form #send-message,
 .greeting .content .box #send-suggestion, #side-swipe .watching-next.contain p, concierge-info h6,
 #conversation-container .message { font-size: 18px; }
 .check-list-title, .button2, .lists-nav, .recommendation-action p:first-of-type, .follow-name,
