--- a/platforms/ios/www/css/main-ipad.css
+++ b/platforms/ios/www/css/main-ipad.css
@@ -791,9 +791,8 @@
         margin-top: 5px;
     }
 
-    #friends #list-row-wrapper {
-        height: 890px;
-    }
+    #friends.self #list-row-wrapper { height: 890px; }
+    #friends #list-row-wrapper { height: 973px; }
 
 
     /*
@@ -801,7 +800,10 @@
         lists
     ============================================================== 
     */
-
+    .list-grid-item {
+        height: 181px;
+        width: 122px;
+    }
     #user-matches { height: 973px; }
     #user-matches .match {
         float: left;
