--- a/platforms/ios/www/templates/listRow.html
+++ b/platforms/ios/www/templates/listRow.html
@@ -13,7 +13,7 @@
 </div>
 
 <div id="list-row-wrapper">
-    <div style="float: left;">
+    <div id="list-div" style="float: left;">
         <% if(owner) { %>
             <!-- <div class="rel" style="height: 42px;background-color: rgb(241, 241, 241);">
                 <form id="list-search-form" action="javascript:void(0);">
