--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -1349,10 +1349,14 @@ div#fancy-button:after {
 #welcome {
     background-color: rgb(223, 223, 223);
 }
+.catItem img,
+.digest-content-img,
+.feed-item-card img {
+    width: 100%;
+}
 #welcome div img,
 #feed-container div img,
 #up-next-wrapper div img,
-#category-container div img,
 #recommended-categories .category img { width: 100%; }
 #category-container div.title img {
     background-color: white;
@@ -2394,6 +2398,50 @@ div.check-list-wrapper div.check-list-item {
     background-size: 100%;
     background-position: 0px 0px;
 }
+/* ++++++++++++++++++++ DIGEST SECTION ++++++++++++++++++++ */
+
+.digest-item {
+    border: 1px solid lightgray;
+    border-radius: 4px;
+    position: relative;
+    background: white;
+    padding: 10px;
+    margin: 10px;
+}
+.digest-item h1 {
+    text-transform: uppercase;
+    display: inline;
+}
+.digest-item h1,
+.digest-item h2 {
+    padding: 5px;
+    width: 83%;
+}
+.digest-item h2 {
+    display: inline-block;
+    font-size: 12px;
+}
+.digest-item p {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+}
+.digest-item p,
+.digest-item h2 {
+    font-weight: bold;
+}
+
+.digest-icon {
+    margin-left: 4px;
+    width: 35px;
+    float: left;
+}
+
+.digest-content-img {
+    margin: 10px 0;
+}
+
+
 
 /* ++++++++++++++++++++ NEW REC FEED ++++++++++++++++++++ */
 
