--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -1370,7 +1370,6 @@ div#fancy-button:after {
 .music-section .poster img.movie-img { height: 258px;}
 .poster img.movie-img { height: 390px; }
 .poster img.movie-img.music { height: 260px; }
-#category-container div h1 { color: #000; }
 #category-container div .highlight {
     position: absolute;
     top: 5px;
@@ -2405,7 +2404,6 @@ div.check-list-wrapper div.check-list-item {
     border-radius: 4px;
     position: relative;
     background: white;
-    padding: 10px;
     margin: 10px;
 }
 .digest-item h1 {
@@ -2438,7 +2436,21 @@ div.check-list-wrapper div.check-list-item {
 }
 
 .digest-content-img {
-    margin: 10px 0;
+    margin: 10px 0 0;
+}
+.digest-item-content {
+    margin: 10px;
+}
+.content-item-footer {
+    border-top: 1px solid rgb(216, 216, 216);
+    background-color: rgb(229, 229, 229);
+    font-size: 10px;
+    padding: 10px;
+    color: gray;
+}
+.content-item-footer h1 {
+    text-transform: none;
+    color: gray;
 }
 
 
