--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -2413,7 +2413,7 @@ div.check-list-wrapper div.check-list-item {
 .digest-item h1,
 .digest-item h2 {
     padding: 5px;
-    width: 83%;
+    width: 82%;
 }
 .digest-item h2 {
     display: inline-block;
@@ -2444,13 +2444,43 @@ div.check-list-wrapper div.check-list-item {
 .content-item-footer {
     border-top: 1px solid rgb(216, 216, 216);
     background-color: rgb(229, 229, 229);
+    line-height: 20px;
     font-size: 10px;
     padding: 10px;
+    height: 20px;
     color: gray;
+}
+.clip-footer { height: 100%; }
+
+.clip-footer div {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 16px;
+    height: 100%;
+    float: left;
+    width: 33%;
+}
+.clip-footer .favorite {
+    background-image: url(../images/lists/favorite.png);
+}
+.clip-footer .favorite.active {
+    background-image: url(../images/lists/red_favorite.png);
+}
+.clip-footer .queue {
+    background-image: url(../images/lists/queue.png);
+    background-size: 20px;
+}
+.clip-footer .queue.active {
+    background-image: url(../images/lists/red_queue.png);
 }
 .content-item-footer h1 {
     text-transform: none;
     color: gray;
+}
+
+.available-on {
+    display: inline-block;
+    margin-top: 5px;
 }
 
 
