--- a/platforms/ios/www/css/main-4.7-inch.css
+++ b/platforms/ios/www/css/main-4.7-inch.css
@@ -32,6 +32,14 @@
     height: 179px;
     width: 119px;
 }
+.digest-content-img {
+    height: 145px;
+}
+.purchase-links a {
+    height: 25px;
+    width: 25px;
+    top: 7px;
+}
 #welcome div .title {
     padding-bottom: 5px;
     line-height: 19px;
