--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -54,6 +54,10 @@ table {
     font-family: Symbola;
     src: url(font/Symbola605.ttf);
 }
+@font-face {
+    font-family: WisdomScript;
+    src: url(font/WisdomScript.otf);
+}
 * {
     -webkit-touch-callout: none;
     -webkit-text-size-adjust: none;
@@ -635,7 +639,7 @@ div.left.button.back:active { opacity: 0.5; }
 #home-slider {
 	overflow: hidden;
 	position: relative;
-    border-top: 1px solid #D3D3D3;
+    border-top: 1px solid #D32724;
 }
 #wrapper.home {
     /*background-color: rgb(215, 55, 48);
@@ -930,10 +934,10 @@ div.left.button.back:active { opacity: 0.5; }
     padding: 12px;
 }
 #category-container {
-	overflow: hidden;
+    background: #F5F5F7;
+    overflow: hidden;
     list-style: none;
     margin: 0;
-    background: rgb(228, 226, 225);
 }
 #category-container #side-swipe {
     position: relative;
@@ -1802,14 +1806,31 @@ div.recommendation.list-item.userChoice .title {
     background-size: 23px;
     background-position: 15px;
 }
-#play-button {
+.play-button {
     position: absolute;
-    bottom: 68px;
-    right: 0;
-    left:0;
     margin: 0 auto;
     height: 26px;
+    color: white;
+    bottom: 68px;
     z-index: 5;
+    right: 0;
+    left:0;
+}
+.play-button:after {
+    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.44);
+    text-align: center;
+    position: absolute;
+    line-height: 40px;
+    content: "\25BA";
+    font-size: 30px;
+    width: 100%;
+    left: 3px;
+}
+.play-button.pause:after {
+    content: "\2590 \2590";
+    font-size: 20px;
+    left: -3px;
+    top: -1px;
 }
 #queue-guide {
     position: absolute;
@@ -2399,11 +2420,42 @@ div.check-list-wrapper div.check-list-item {
 }
 /* ++++++++++++++++++++ DIGEST SECTION ++++++++++++++++++++ */
 
+#digest-header {
+    background: linear-gradient(#d32724, #a551eb, #429ff8);
+    text-align: center;
+    height: 111px;
+    color: white;
+}
+#background-red {
+    background-color: #d32724;
+    position: absolute;
+    height: 300px;
+    top: -200px;
+    width: 100%;
+    z-index: -2;
+}
+#digest-day {
+    font-family: WisdomScript;
+    text-transform: capitalize;
+    font-style: italic;
+    font-size: 27px;
+    padding: 14px 0;
+}
+#digest-line {
+    font-weight: 300;
+    font-size: 14px;
+    padding: 3px 0;
+}
+#digest-facts {
+    font-weight: 300;
+    font-size: 13px;
+    padding: 5px 0;
+}
 .digest-item {
     border: 1px solid lightgray;
     border-radius: 4px;
     position: relative;
-    background: white;
+    background: #ffffff;
     margin: 10px;
 }
 .digest-item h1 {
@@ -2419,7 +2471,7 @@ div.check-list-wrapper div.check-list-item {
 }
 .digest-item h2 {
     display: inline-block;
-    font-size: 12px;
+    font-size: 14px;
 }
 .digest-item p {
     position: absolute;
@@ -2440,11 +2492,22 @@ div.check-list-wrapper div.check-list-item {
 .digest-content-img {
     background-size: 100%;
     position: relative;
-    margin: 10px 0 0;
-    height: 140px;
+    margin: 1px 0 0;
+    height: 153px;
+}
+.play-button {
+    background-color: rgba(255, 255, 255, 0.59);
+    border-radius: 40% / 70%;
+    position: absolute;
+    margin: 0 auto;
+    height: 40px;
+    width: 60px;
+    right: 0;
+    top: 40%;
+    left: 0;
 }
 .digest-item-content {
-    margin: 10px;
+    margin: 11px 10px;
 }
 .digest-item-content-header h1 span{
     text-transform: initial;
@@ -2455,16 +2518,17 @@ div.check-list-wrapper div.check-list-item {
     color: black;
 }
 .content-item-footer {
-    border-top: 1px solid rgb(216, 216, 216);
-    background-color: rgb(229, 229, 229);
+    background-color: #EFEFF4;
     line-height: 20px;
     font-size: 10px;
     padding: 10px;
-    height: 20px;
+    height: 30px;
     color: gray;
 }
 h1.pack-footer {
     display: inline-block;
+    line-height: 30px;
+    height: 30px;
     width: 100%;
     padding: 0;
 }
@@ -2481,7 +2545,6 @@ h1.pack-footer {
 .clip-footer div {
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 16px;
     height: 100%;
     float: left;
     width: 50%;
@@ -2494,7 +2557,7 @@ h1.pack-footer {
 }
 .clip-footer .queue {
     background-image: url(../images/lists/queue.png);
-    background-size: 20px;
+    background-size: 25px;
 }
 .clip-footer .queue.active {
     background-image: url(../images/lists/red_queue.png);
@@ -2507,7 +2570,7 @@ h1.pack-footer {
     background-size: 100% 100%;
     display: inline-block;
     position: relative;
-    margin: 0 2px;
+    margin: 0 3px;
     height: 20px;
     width: 20px;
     top: 5px;
@@ -2519,12 +2582,12 @@ h1.pack-footer {
     font-size: 12px;
 }
 .digest-recommendation {
-    margin-top: 5px;
+    margin-top: 8px;
 }
 .digest-avatar {
     border-radius: 50%;
-    height: 30px;
-    width: 30px;
+    height: 33px;
+    width: 33px;
 }
 .tastemates .digest-avatar {
     border: 3px solid white;
@@ -6615,7 +6678,7 @@ h1.pop-up-content {
 .hw { width: 50%; }
 .bold { font-weight: bold; }
 .button { -webkit-appearance: none;}
-.red { color: red; }
+.red { color: #D32724; }
 .carrot {
     position: absolute;
     background-image: url(../images/discovery/chevron.png);
