--- a/platforms/ios/www/templates/start.html
+++ b/platforms/ios/www/templates/start.html
@@ -1,27 +1,10 @@
-<% var slid = slid || null %>
-<div id="slider">
-    <div id="slider-container">
-        <% if(slid !== "true"){ %>
-        <div class="intro-slide" id="slide1"></div>
-        <div class="intro-slide" id="slide2"></div>
-        <div class="intro-slide" id="slide3"></div>
-        <div class="intro-slide" id="slide4"></div>
-        <% } %>
-        <div class="intro-slide" id="slide5 rel">
-            <div id="logo"></div>
-            <div id="ready-to-start">
-                <h4>Ready to go?</h4>
-                <p>Connect with Facebook to see what<br />your friends are into!</p>
-            </div>
-            <div class="login-button" id="facebook">Facebook</div>
-            <div class="login-button" id="sign-up">Login</div>
-            <!--<div class="login-button" id="trailerpop">Email</div>-->
-        </div>
-    </div>
-</div>
 
-<% if(slid !== "true") { %>
-<div id="indicator">
-    <div id="dotty"></div>
-</div>
-<% } %>
+    <div id="intro-container">
+        <div id="logo"></div>
+        <div id="ready-to-start">
+            <h4>Ready to go?</h4>
+            <p>Connect with Facebook to see what<br />your friends are into!</p>
+        </div>
+        <div class="login-button" id="facebook">Facebook</div>
+        <div class="login-button" id="sign-up">Login</div>
+    </div>
